home layout bug fixes

--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -2,25 +2,22 @@
     display: flex;
     align-items: stretch;
     height: 100vh;
-    
 
     aside{
         flex: 7;
         background: #835afd;
         color: #fff;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-
-        padding: 7.5rem 5rem;
+        align-items: center;
+        padding: 0 2rem;
 
         img{
             max-width: 20rem;
+            display: block;
         }
 
         strong{
             font: 700 2rem 'Poppins', sans-serif;
-            line-height: 2.62;
             margin-top: 1rem;
         }
 
@@ -165,10 +162,12 @@
 
 
 //Desktop
-@media (min-width: 1200px) { 
+@media (min-width: 1024px) { 
     #pageAuth {
         aside{
-            display: block !important;
+            display: flex !important;
+            flex-direction: column;
+            justify-content: center;
         }
     }
  }
