--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -204,18 +204,6 @@
                     display: none;
                 }
 
-                div{
-                    
-                    flex: 1;
-                    justify-content: flex-end;
-
-                    .room-code{
-                        flex: 5;
-                    }
-                }
-
-
-
                 .menu.show{
                     visibility: visible;
                 }
